<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/calculate_title"
        android:layout_gravity="center"
        android:gravity="center_horizontal"

        />

    <TextView
        android:id="@+id/tvHelloUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"

        />

    <!--buttons-->
    <TextView
        android:id="@+id/tvMyScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="0"
        android:textSize="30sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:id="@+id/btnMainChallenge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:text="@string/challenge"
            />
        <Button
            android:id="@+id/btnMulti20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:layout_marginHorizontal="10dp"
            android:text="@string/multi_20"
            />

        <Button
            android:id="@+id/btnMultiTable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multi_table"
            android:background="@android:color/holo_purple"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="8"

        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="5"
        >

        <TextView
            android:id="@+id/tvMainFirstNum"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
           android:textSize="25sp"
            android:background="@android:color/holo_orange_light"
            android:layout_marginBottom="5dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:text="X"
            android:background="@android:color/holo_orange_light"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/tvMainSecondNum"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:background="@android:color/holo_orange_light"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/etMainAnswer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/answer"
            android:gravity="center"
            android:background="@android:color/holo_orange_light"
            android:layout_marginBottom="5dp"/>
        <Button
            android:id="@+id/btnMainCheck"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/test"
            android:background="@android:color/holo_purple"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/design_default_color_error"
        android:text="Save" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show all users" />

</LinearLayout>